--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,6 +32,11 @@ body, html {
     background-size: cover;
 }
 
+.glyphicon.glyphicon-home {
+    font-size: 20px;
+    color: black;
+}
+
 .jumbotron{
     background-color:#2E2D88;
     color:white;
@@ -86,6 +91,11 @@ body, html {
     font-size: 3em;
 }
 
+#profile-indicator {
+    padding-top: 10px;
+    text-align: center;
+}
+
 #viewrooms-btn {
     padding-top: 20px;
     text-align: center;
@@ -120,9 +130,19 @@ body, html {
             <li class="text-center"><a href="#booking">BOOKING</a></li>
         </div>
 
+        <% if(userData != 'undefined') { %>
+            <div class="nav nav-pills col-lg-2 col-md-2 col-sm-2 col-xs-2" id="profile-indicator">
+                <a href="/dashboard"><span class="glyphicon glyphicon-home"></span></a>
+                <p>Logged in as <%= userData.user.username %></p>
+            </div>
+            <div class="nav nav-pills col-lg-1 col-md-1 col-sm-1 col-xs-2">
+                <a href="/users/logout"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGOUT</button></a>
+            </div>
+        <% } else { %>
         <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
             <a href="users/login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
         </div>
+        <% } %>
     </ul>
         
     </div> <!-- home-navbar -->
